Fix the slider. CSS was positioning the slider off the left edge of the screen. Make the maze size go 10 - 100, stepping by 10. Anything above 100 causes the maze creation to stack overflow.

--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,3 @@ body {
   height: 100%;
   overflow: hidden;
 }
-
-input {
-  z-index: 1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: 0;
-  background: none;
-  outline: none;
-  border: none;
-  color: white;
-  font-size: 48px;
-  font-weight: bolder;
-  text-align: center;
-  transform: translateX(-50%) translateY(-50%);
-  mix-blend-mode: difference;
-}
